--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/images/logo_branca_pra_aba.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/images/logo_branca_pra_aba.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>plataforma-video</title>
+    <title>Ouse Live - Transmissão</title>
   </head>
   <body>
     <div id="root"></div>
